--- a/erpnext_quickbooks/erpnext_quickbooks/doctype/quickbooks_settings/quickbooks_settings.json
+++ b/erpnext_quickbooks/erpnext_quickbooks/doctype/quickbooks_settings/quickbooks_settings.json
@@ -971,7 +971,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Sync Data", 
+   "label": "Sync Master", 
    "length": 0, 
    "no_copy": 1, 
    "permlevel": 0, 
@@ -1031,6 +1031,36 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "sync_transaction", 
+   "fieldtype": "Button", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Sync Transaction", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -1325,7 +1355,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-02-13 20:49:12.889107", 
+ "modified": "2018-06-18 02:55:50.105828", 
  "modified_by": "Administrator", 
  "module": "Erpnext Quickbooks", 
  "name": "Quickbooks Settings", 
